Added additional functionality

--- a/backend/templates/question.html
+++ b/backend/templates/question.html
@@ -55,13 +55,14 @@
       </style>
   </head>
   <body>
+    <h1>Question: {{ quiz.get_question_index() }} / {{ quiz.get_num_questions() }}</h1>
     <h1>{{ question.question }}</h1>
     <form method="POST" action="{{ url_for('blueprint.show_question_result') }}">
       {% for choice in possible_answers %}
         <input type="radio" name="answer" value="{{ choice.answer }}">
         <label>{{ choice.answer }}</label><br>
       {% endfor %}
-      <input type="hidden" name="question_id" value="{{ question.id }}">
+      <input type="hidden" name="question_id" value="{{ question.get_question_id() }}">
       <button type="submit">Submit Answer</button>
     </form>
   </body>
