--- a/backend/templates/high_scores.html
+++ b/backend/templates/high_scores.html
@@ -60,20 +60,35 @@
         .play-again:hover {
             background-color: #444;
         }
+
+        #user-score {
+            background-color: #007bff !important;
+        }
 	</style>
 </head>
 <body>
 	<h1>High Scores</h1>
 	<table>
 		<tr>
+            <th>Place</th>
 			<th>Initials</th>
 			<th>Score</th>
 		</tr>
 		{% for score in scores %}
-		<tr>
-			<td>{{ score.initials }}</td>
-			<td>{{ score.score }}</td>
+        {% if score.id == user_score.id %}
+		<tr id="user-score">
+            <td id="user-score">{{ score.place }} lol</td>
+			<td id="user-score">{{ score.initials }}</td>
+			<td id="user-score">{{ score.score }}</td>
 		</tr>
+        {% else %}
+        <tr>
+            <td>{{ score.place }}</td>
+            <td>{{ score.initials }}</td>
+            <td>{{ score.score }}</td>
+        </tr>
+        {% endif %}
+
 		{% endfor %}
 	</table>
     <form method="POST" action="{{ url_for('blueprint.select_number_of_questions')}}">
