4 character limit on initials

--- a/backend/templates/high_scores.html
+++ b/backend/templates/high_scores.html
@@ -77,7 +77,7 @@
 		{% for score in scores %}
         {% if score.id == user_score.id %}
 		<tr id="user-score">
-            <td id="user-score">{{ score.place }} lol</td>
+            <td id="user-score">{{ score.place }}</td>
 			<td id="user-score">{{ score.initials }}</td>
 			<td id="user-score">{{ score.score }}</td>
 		</tr>
