--- a/backend/templates/answer_result.html
+++ b/backend/templates/answer_result.html
@@ -1,67 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Quiz Answer Result</title>
-    <style>
-        body {
-          font-family: Arial, sans-serif;
-          background-color: #f7f7f7;
-          margin: 0;
-          padding: 0;
-        }
+<head>
+	<title>Quiz Answer Result</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			background-color: #f7f7f7;
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
 
-        h1 {
-          font-size: 3rem;
-          color: #333;
-          text-align: center;
-          margin-top: 2rem;
-        }
+		.container {
+			text-align: center;
+			background-color: #fff;
+			padding: 20px;
+			border: 1px solid #414d5b;
+			border-radius: 5px;
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		}
 
-        p {
-          font-size: 1.2rem;
-          color: #333;
-          text-align: center;
-          margin-top: 1rem;
-        }
+		h1 {
+			font-size: 3rem;
+			color: #333;
+			margin-top: 2rem;
+		}
 
-        a {
-          display: block;
-          margin-top: 2rem;
-          text-align: center;
-          font-size: 1.2rem;
-          color: #007bff;
-          text-decoration: none;
-          border-bottom: 1px solid #007bff;
-          padding-bottom: 0.2rem;
-        }
+		p {
+			font-size: 1.2rem;
+			color: #333;
+			margin-top: 1rem;
+		}
 
-        a:hover {
-          color: #0062cc;
-          border-bottom: 1px solid #0062cc;
-        }
+		a {
+			display: inline-block;
+			margin-top: 2rem;
+			text-align: center;
+			font-size: 1.2rem;
+			color: #007bff;
+			text-decoration: none;
+			border: 1px solid #007bff;
+			padding: 0.5rem 1rem;
+			border-radius: 5px;
+		}
 
-        /* Styles for correct answer */
-        h1.correct {
-          color: green;
-        }
+		a:hover {
+			color: #0062cc;
+			border-color: #0062cc;
+		}
 
-        /* Styles for incorrect answer */
-        h1.incorrect {
-          color: red;
-        }
-    </style>
-  </head>
-  <body>
-    {% if is_correct %}
-      <h1 class="correct">Correct!</h1>
-    {% else %}
-      <h1 class="incorrect">Incorrect :(</h1>
-    {% endif %}
-    <p>The correct answer was "{{ correct_answer }}".</p>
-    {% if last_question %}
-    <a href="{{ url_for('blueprint.show_score')}}">See score</a>
-    {% else %}
-    <a href="{{ url_for('blueprint.show_question')}}">Next question</a>
-    {% endif %}
-  </body>
+		/* Styles for correct answer */
+		h1.correct {
+			color: green;
+		}
+
+		 /* Styles for incorrect answer */
+		h1.incorrect {
+			color: red;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		{% if is_correct %}
+		<h1 class="correct">Correct!</h1>
+		{% else %}
+		<h1 class="incorrect">Incorrect :(</h1>
+		{% endif %}
+		<p>The correct answer was "{{ correct_answer }}".</p>
+		{% if last_question %}
+		<a href="{{ url_for('blueprint.show_score')}}">See score</a>
+		{% else %}
+		<div class="next-question">
+			<a href="{{ url_for('blueprint.show_question')}}">Next question</a>
+		</div>
+		{% endif %}
+	</div>
+</body>
 </html>
+
