--- a/backend/templates/select_number_of_questions.html
+++ b/backend/templates/select_number_of_questions.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Select Number of Questions</title>
+	<title>Quizzer</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<style type="text/css">
 		body {
 			font-family: Arial, sans-serif;
-			font-size: 16px;
+			font-size: 25px;
 			padding: 20px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			margin: 0;
 		}
 
 		h1 {
 			margin-top: 0;
+			color: #F1C40F;
+			font-size: 80px;
 		}
 
 		p {
 			margin-bottom: 30px;
 		}
 
+		.slider-container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+
 		.slider {
 			margin-bottom: 30px;
-			width: 100%;
+			width: 60%;
 		}
 
 		.display {
@@ -74,13 +87,17 @@
 	</script>
 </head>
 <body>
-	<h1>Select Number of Questions</h1>
-	<p>Please select the number of questions you would like to answer:</p>
-	<div id="slider" class="slider"></div>
-	<div class="display">Current value: <span id="display"></span></div>
-	<form action="{{ url_for('blueprint.show_question') }}" method="POST">
-		<input type="hidden" name="num_questions" value="1" id="num_questions">
-		<button type="submit">Start Quiz</button>
-	</form>
+	<div class="slider-container">
+		<h1>Quizzer</h1>
+		<h2>Select Number of Questions</h2>
+		<p>Please select the number of questions you would like to answer:</p>
+		<div id="slider" class="slider"></div>
+		<div class="display">Current value: <span id="display"></span></div>
+		<form action="{{ url_for('blueprint.show_question') }}" method="POST">
+			<input type="hidden" name="num_questions" value="1" id="num_questions">
+			<button type="submit">Start Quiz</button>
+		</form>
+	</div>
 </body>
 </html>
+
